--- a/Source/WriteableBitmapEx.Wpf/WriteableBitmapEx.Wpf.csproj
+++ b/Source/WriteableBitmapEx.Wpf/WriteableBitmapEx.Wpf.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>TRACE;WPF</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;WPF;NETFX_CORE</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -50,10 +50,13 @@
     <Compile Include="..\Common\GlobalAssemblyInfo.cs" Link="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="..\WriteableBitmapEx\BitmapContext.cs" Link="BitmapContext.cs" />
     <Compile Include="..\WriteableBitmapEx\BitmapFactory.cs" Link="BitmapFactory.cs" />
-    <Compile Include="..\WriteableBitmapEx\WriteableBitmapAntialiasingExtensions.cs" Link="WriteableBitmapAntialiasingExtensions.cs" />
-    <Compile Include="..\WriteableBitmapEx\WriteableBitmapBaseExtensions.cs" Link="WriteableBitmapBaseExtensions.cs" />
-    <Compile Include="..\WriteableBitmapEx\WriteableBitmapBlitExtensions.cs" Link="WriteableBitmapBlitExtensions.cs" />
     <Compile Include="..\WriteableBitmapEx\WriteableBitmapContextExtensions.cs" Link="WriteableBitmapContextExtensions.cs" />
+	<Compile Include="..\WriteableBitmapEx\WriteableBitmapAntialiasingExtensions.cs" Link="WriteableBitmapAntialiasingExtensions.cs" />
+	<Compile Include="..\WriteableBitmapEx\ContextAntialiasingExtensions.cs" Link="ContextAntialiasingExtensions.cs" />
+    
+	
+	<Compile Include="..\WriteableBitmapEx\WriteableBitmapBaseExtensions.cs" Link="WriteableBitmapBaseExtensions.cs" />
+    <Compile Include="..\WriteableBitmapEx\WriteableBitmapBlitExtensions.cs" Link="WriteableBitmapBlitExtensions.cs" />
     <Compile Include="..\WriteableBitmapEx\WriteableBitmapConvertExtensions.cs" Link="WriteableBitmapConvertExtensions.cs" />
     <Compile Include="..\WriteableBitmapEx\WriteableBitmapFillExtensions.cs" Link="WriteableBitmapFillExtensions.cs" />
     <Compile Include="..\WriteableBitmapEx\WriteableBitmapFilterExtensions.cs" Link="WriteableBitmapFilterExtensions.cs" />
@@ -62,6 +65,18 @@
 	<Compile Include="..\WriteableBitmapEx\WriteableBitmapSplineExtensions.cs" Link="WriteableBitmapSplineExtensions.cs" />
 	<Compile Include="..\WriteableBitmapEx\WriteableBitmapTextExtensions.cs" Link="WriteableBitmapTextExtensions.cs" />
     <Compile Include="..\WriteableBitmapEx\WriteableBitmapTransformationExtensions.cs" Link="WriteableBitmapTransformationExtensions.cs" />
+	
+	<Compile Include="..\WriteableBitmapEx\ContextBaseExtensions.cs" Link="ContextBaseExtensions.cs" />
+    <Compile Include="..\WriteableBitmapEx\ContextBlitExtensions.cs" Link="ContextBlitExtensions.cs" />
+    <Compile Include="..\WriteableBitmapEx\ContextConvertExtensions.cs" Link="ContextConvertExtensions.cs" />
+    <Compile Include="..\WriteableBitmapEx\ContextFillExtensions.cs" Link="ContextFillExtensions.cs" />
+	<Compile Include="..\WriteableBitmapEx\ContextLineExtensions.cs" Link="ContextLineExtensions.cs" />
+	<Compile Include="..\WriteableBitmapEx\ContextShapeExtensions.cs" Link="ContextShapeExtensions.cs" />
+	<Compile Include="..\WriteableBitmapEx\ContextSplineExtensions.cs" Link="ContextSplineExtensions.cs" />
+	<Compile Include="..\WriteableBitmapEx\ContextTextExtensions.cs" Link="ContextTextExtensions.cs" />
+	
+	
+	
   </ItemGroup>
 
 </Project>
